--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://goal.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://world.tscn", "res://arrow.tscn", "res://goal.tscn")
-current_scene="res://world.tscn"
+current_scene="res://arrow.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -38,12 +38,9 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://arrow.gd"]
 selected_script="res://arrow.gd"
-open_help=["CharacterBody2D"]
+open_help=["Array", "CharacterBody2D"]
 script_split_offset=70
 list_split_offset=0
-window_rect=Rect2i(1281, 31, 1278, 1000)
-window_screen=0
-window_screen_rect=Rect2i(0, 0, 2560, 1032)
 
 [ShaderEditor]
 
